<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:showIn="@+id/drawer_layout">


    <Button
        android:textAllCaps="false"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/CVBtn1"
        android:id="@+id/CVBtn1"
        android:layout_gravity="center_horizontal" />

    <Button
        android:textAllCaps="false"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/CVBtn2"
        android:id="@+id/CVBtn2"
        android:layout_gravity="center_horizontal" />

    <Button
        android:textAllCaps="false"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/CVBtn3"
        android:id="@+id/CVBtn3"
        android:layout_gravity="center_horizontal" />

    <Button
        android:textAllCaps="false"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/CVBtn4"
        android:id="@+id/CVBtn4"
        android:layout_gravity="center_horizontal" />

    <Button
        android:textAllCaps="false"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/CVBtn5"
        android:id="@+id/CVBtn5"
        android:layout_gravity="center_horizontal" />

    <Button
        android:textAllCaps="false"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/CVBtn6"
        android:id="@+id/CVBtn6"
        android:layout_gravity="center_horizontal" />

    <Button
        android:textAllCaps="false"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Logout"
        android:id="@+id/CVBtn7"
        android:layout_gravity="center_horizontal" />
</LinearLayout>
