<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/list_selector"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SATLabel"
        android:id="@+id/SATLabel"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:textSize="32dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:paddingTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SATChooseSA"
        android:id="@+id/SATChooseSALabel"
        android:layout_gravity="center_horizontal"
        android:layout_above="@+id/saTerminationList"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/saTerminationList"
        android:layout_gravity="center_horizontal"
        android:choiceMode="singleChoice"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentBottom="true">

        <Button
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/SALRefresh"
            android:textAllCaps="false"
            android:id="@+id/satRefBtn"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/satTermBtn"
            android:textAllCaps="false"
            android:id="@+id/satTermBtn"
            android:layout_gravity="center_horizontal" />

        </LinearLayout>
</RelativeLayout>